refactor : magic string 제거 (hp, maxplayer)